tests/ui/snapshots/syntax_chained_comparison.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_chained_comparison.wardscript
---
exit: Some(1)
--- human ---
[W0019] Error: comparison operators can't be chained
   ╭─[ tests/ui/syntax_chained_comparison.wardscript:2:11 ]
   │
 2 │     0 < x < 10
   │       ┬   ┬  
   │       ╰────── first comparison
   │           │  
   │           ╰── second comparison
   │ 
   │ Help: split it with `&&`, e.g. `a < b && b < c`
───╯
error: could not check `tests/ui/syntax_chained_comparison.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0019",
      "help": "split it with `&&`, e.g. `a < b && b < c`",
      "labels": [
        {
          "message": "second comparison",
          "primary": true,
          "span": {
            "end": {
              "column": 12,
              "line": 2,
              "offset": 41
            },
            "start": {
              "column": 11,
              "line": 2,
              "offset": 40
            }
          }
        },
        {
          "message": "first comparison",
          "primary": false,
          "span": {
            "end": {
              "column": 8,
              "line": 2,
              "offset": 37
            },
            "start": {
              "column": 7,
              "line": 2,
              "offset": 36
            }
          }
        }
      ],
      "message": "comparison operators can't be chained",
      "severity": "error",
      "span": {
        "end": {
          "column": 12,
          "line": 2,
          "offset": 41
        },
        "start": {
          "column": 11,
          "line": 2,
          "offset": 40
        }
      }
    }
  ],
  "file": "tests/ui/syntax_chained_comparison.wardscript"
}
