tests/ui/snapshots/syntax_duplicate_uses.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_duplicate_uses.wardscript
---
exit: Some(1)
--- human ---
[W0018] Error: duplicate `uses` clause
   ╭─[ tests/ui/syntax_duplicate_uses.wardscript:3:5 ]
   │
 3 │     uses {net.read}
   │     ──┬─  
   │       ╰─── second clause here
   │
   ├─[ tests/ui/syntax_duplicate_uses.wardscript:3:5 ]
   │
 2 │     uses {llm}
   │     ──┬─  
   │       ╰─── first declared here
   │ 
   │ Help: merge them into a single `uses { ... }`
───╯
error: could not check `tests/ui/syntax_duplicate_uses.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0018",
      "file": "tests/ui/syntax_duplicate_uses.wardscript",
      "help": "merge them into a single `uses { ... }`",
      "labels": [
        {
          "message": "second clause here",
          "primary": true,
          "span": {
            "end": {
              "column": 9,
              "line": 3,
              "offset": 37
            },
            "start": {
              "column": 5,
              "line": 3,
              "offset": 33
            }
          }
        },
        {
          "message": "first declared here",
          "primary": false,
          "span": {
            "end": {
              "column": 9,
              "line": 2,
              "offset": 22
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 18
            }
          }
        }
      ],
      "message": "duplicate `uses` clause",
      "severity": "error",
      "span": {
        "end": {
          "column": 9,
          "line": 3,
          "offset": 37
        },
        "start": {
          "column": 5,
          "line": 3,
          "offset": 33
        }
      }
    }
  ],
  "file": "tests/ui/syntax_duplicate_uses.wardscript"
}
