tests/ui/snapshots/syntax_empty_interpolation.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_empty_interpolation.wardscript
---
exit: Some(1)
--- human ---
[W0004] Error: empty interpolation `{}`
   ╭─[ tests/ui/syntax_empty_interpolation.wardscript:2:12 ]
   │
 2 │     "json: {}"
   │            ─┬  
   │             ╰── expected an expression inside
   │ 
   │ Help: put an expression inside, e.g. `{name}`, or write `{{}}` for literal braces
───╯
error: could not check `tests/ui/syntax_empty_interpolation.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0004",
      "file": "tests/ui/syntax_empty_interpolation.wardscript",
      "help": "put an expression inside, e.g. `{name}`, or write `{{}}` for literal braces",
      "labels": [
        {
          "message": "expected an expression inside",
          "primary": true,
          "span": {
            "end": {
              "column": 14,
              "line": 2,
              "offset": 32
            },
            "start": {
              "column": 12,
              "line": 2,
              "offset": 30
            }
          }
        }
      ],
      "message": "empty interpolation `{}`",
      "severity": "error",
      "span": {
        "end": {
          "column": 14,
          "line": 2,
          "offset": 32
        },
        "start": {
          "column": 12,
          "line": 2,
          "offset": 30
        }
      }
    }
  ],
  "file": "tests/ui/syntax_empty_interpolation.wardscript"
}
