tests/ui/snapshots/syntax_expected_pattern.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_expected_pattern.wardscript
---
exit: Some(1)
--- human ---
[W0014] Error: expected a pattern, found `+`
   ╭─[ tests/ui/syntax_expected_pattern.wardscript:3:9 ]
   │
 3 │         + => 1,
   │         ┬  
   │         ╰── expected a pattern
   │ 
   │ Help: patterns are `_`, a name, a literal, or a variant like `Some(x)`
───╯
error: could not check `tests/ui/syntax_expected_pattern.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0014",
      "file": "tests/ui/syntax_expected_pattern.wardscript",
      "help": "patterns are `_`, a name, a literal, or a variant like `Some(x)`",
      "labels": [
        {
          "message": "expected a pattern",
          "primary": true,
          "span": {
            "end": {
              "column": 10,
              "line": 3,
              "offset": 45
            },
            "start": {
              "column": 9,
              "line": 3,
              "offset": 44
            }
          }
        }
      ],
      "message": "expected a pattern, found `+`",
      "severity": "error",
      "span": {
        "end": {
          "column": 10,
          "line": 3,
          "offset": 45
        },
        "start": {
          "column": 9,
          "line": 3,
          "offset": 44
        }
      }
    }
  ],
  "file": "tests/ui/syntax_expected_pattern.wardscript"
}
