tests/ui/snapshots/syntax_expected_type.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_expected_type.wardscript
---
exit: Some(1)
--- human ---
[W0013] Error: expected a type, found `42`
   ╭─[ tests/ui/syntax_expected_type.wardscript:1:9 ]
   │
 1 │ fn f(x: 42) -> Int {
   │         ─┬  
   │          ╰── expected a type such as `String` or `List<Int>`
───╯
error: could not check `tests/ui/syntax_expected_type.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0013",
      "help": null,
      "labels": [
        {
          "message": "expected a type such as `String` or `List<Int>`",
          "primary": true,
          "span": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10
            },
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8
            }
          }
        }
      ],
      "message": "expected a type, found `42`",
      "severity": "error",
      "span": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10
        },
        "start": {
          "column": 9,
          "line": 1,
          "offset": 8
        }
      }
    }
  ],
  "file": "tests/ui/syntax_expected_type.wardscript"
}
