tests/ui/snapshots/syntax_interpolation_in_import.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_interpolation_in_import.wardscript
---
exit: Some(1)
--- human ---
[W0022] Error: string interpolation isn't allowed in an import source
   ╭─[ tests/ui/syntax_interpolation_in_import.wardscript:1:13 ]
   │
 1 │ import mcp "{server}" as mail
   │             ────┬───  
   │                 ╰───── interpolation here
   │ 
   │ Help: write `{{` for a literal brace
───╯
error: could not check `tests/ui/syntax_interpolation_in_import.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0022",
      "file": "tests/ui/syntax_interpolation_in_import.wardscript",
      "help": "write `{{` for a literal brace",
      "labels": [
        {
          "message": "interpolation here",
          "primary": true,
          "span": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12
            }
          }
        }
      ],
      "message": "string interpolation isn't allowed in an import source",
      "severity": "error",
      "span": {
        "end": {
          "column": 21,
          "line": 1,
          "offset": 20
        },
        "start": {
          "column": 13,
          "line": 1,
          "offset": 12
        }
      }
    }
  ],
  "file": "tests/ui/syntax_interpolation_in_import.wardscript"
}
