tests/ui/snapshots/syntax_invalid_escape.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_invalid_escape.wardscript
---
exit: Some(1)
--- human ---
[W0003] Error: unknown escape `\q`
   ╭─[ tests/ui/syntax_invalid_escape.wardscript:2:10 ]
   │
 2 │     "tab:\q"
   │          ─┬  
   │           ╰── unknown escape
   │ 
   │ Help: valid escapes are \n \r \t \0 \\ \"
───╯
error: could not check `tests/ui/syntax_invalid_escape.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0003",
      "file": "tests/ui/syntax_invalid_escape.wardscript",
      "help": "valid escapes are \\n \\r \\t \\0 \\\\ \\\"",
      "labels": [
        {
          "message": "unknown escape",
          "primary": true,
          "span": {
            "end": {
              "column": 12,
              "line": 2,
              "offset": 30
            },
            "start": {
              "column": 10,
              "line": 2,
              "offset": 28
            }
          }
        }
      ],
      "message": "unknown escape `\\q`",
      "severity": "error",
      "span": {
        "end": {
          "column": 12,
          "line": 2,
          "offset": 30
        },
        "start": {
          "column": 10,
          "line": 2,
          "offset": 28
        }
      }
    }
  ],
  "file": "tests/ui/syntax_invalid_escape.wardscript"
}
